[package]
name = "radar"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

 
[dependencies]
unescaper = "0.1.2"
pcre2 = "0.2.5"
tokio = { version = "1.11.0", features = ["full"] }
tokio-native-tls = "0.3.0"
native-tls = "0.2.8"
clap = { version = "4.4.8", features = ["derive"] }
futures = "0.3.16"
base64 = "0.13.0"
rand = "0.7"
csv = "1.1"
csv-async = { version = "1.2.1", features = ["tokio", "with_serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.4.0", features = ["base64"] }
serde_json = "1.0"
serde_yaml = "0.9.27"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
